# Juckler

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  exmpl.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 474e425928ac_initial.py
backend/app/: exceptions.py  main.py
backend/app/api/v1/: auth.py  categories.py  common.py
backend/app/core/: config.py  security.py
backend/app/database/: database.py  db.py  session.py  types.py
backend/app/db/: session.py
backend/app/models/: __init__.py  category.py  transaction.py  user.py
backend/app/repositories/: base.py  category.py
backend/app/schemas/: __init__.py  category.py  transaction.py  user.py
backend/tests/: conftest.py  test_auth.py
