[project]
name = "juckler-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pydantic>=2.12.5",
    "pydantic-settings",
    "email-validator>=2.3.0",
    "fastapi-users[sqlalchemy]>=15.0.3",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "python-multipart>=0.0.21",
    "python-dotenv>=1.2.1",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.11",
]

[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"*/migrations/*" = ["E", "F", "I"]
"tests/*" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.pytest.ini_options]
asyncio_mode = "auto"
